--- a/KnockoffUtilsV1.csproj
+++ b/KnockoffUtilsV1.csproj
@@ -86,8 +86,8 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="PlayerHandler.cs" />
-    <Compile Include="ServerHandler.cs" />
+    <Compile Include="EventHandlers\PlayerHandler.cs" />
+    <Compile Include="EventHandlers\ServerHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
